# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Headers/: pch.hpp
Headers/Core/: Color.hpp  Hittable.hpp  Interval.hpp  LogLevels.hpp  Logger.hpp  Material.hpp  Random.hpp  Ray.hpp  Settings.hpp  Window.hpp
Headers/Hittable/: HittableList.hpp  Sphere.hpp
Headers/LowRenderer/: Camera.hpp
Headers/Material/: Lambertian.hpp  Metal.hpp
Headers/Platform/: Clipboard.hpp
Sources/: main.cpp
Sources/Core/: Color.cpp  Hittable.cpp  Interval.cpp  Random.cpp  Ray.cpp  Settings.cpp  Window.cpp
Sources/Hittable/: HittableList.cpp  Sphere.cpp
Sources/LowRenderer/: Camera.cpp
Sources/Material/: Lambertian.cpp  Metal.cpp
Sources/Platform/Windows/: Clipboard.cpp
